--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,13 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation "org.springframework.boot:spring-boot-starter-web"
+	implementation 'org.postgresql:postgresql:42.5.3'
+	compileOnly 'org.projectlombok:lombok:1.18.26'
+	implementation 'org.apache.commons:lang3:3.1.0'
+
 }
 
 tasks.named('test') {
