Фикс типа у переменной userId, подтянул все зависимости lombok

--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,9 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-web"
 	implementation 'org.postgresql:postgresql:42.5.3'
 	compileOnly 'org.projectlombok:lombok:1.18.26'
-	implementation 'org.apache.commons:lang3:3.1.0'
+
+	annotationProcessor "org.projectlombok:lombok"
+	implementation "org.apache.commons:commons-lang3"
 
 }
 
